# fusion_issue_analysis

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  dev-requirements.txt  dev.sh  main.py  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeowners-check.yml  deploy-dashboard.yml  extract.yml  pr-preview.yml
dashboard/: about.html  about.md  app.py  app_myspace.py  build_mviz.sh  generate_data.py  index.html  mviz.html  render_about.py  serve_local.py  sw-coep.js  write_data_freshness.py
dashboard/dac/: .gitignore  bruin.yml  fix_asset_paths.py  render.py
dashboard/dataface/: fusion-issue-health.board.yml  index.html
dashboard/duckdb-wasm/: index.html
dashboard/evidence/: evidence.config.yaml  generate_sources.py  package-lock.json  package.json
dashboard/ggsql/: README.md  build.py
dashboard/ggsql_spike/: build.py
dashboard/graphene/: README.md  build.py  index.md  mcp_server.py  package-lock.json  package.json
dashboard/marimo/: app.py
dashboard/mcp-app/: README.md  build_data.py  issue-health.html  main.ts  package-lock.json  package.json  server.ts  smoke.mjs
extract/: github_pipeline.py  run.py
tests/: test_dac_dashboard.py  test_dashboard_chrome.py  test_github_helpers.py  test_graphene_dashboard.py  test_mcp_app_dashboard.py  test_mdv_generate_data.py  test_mviz_generate_data.py  test_prefab_windows_2000.py  test_shaper_dashboard.py  test_ui_e2e_wiring.py
transform/: .user.yml  dbt_project.yml  profiles.yml
(+199 files in other folders)
