[project]
name = "fusion-issue-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "dlt[filesystem,parquet]>=1.24.0",
    "duckdb>=1.5.1",
    "marimo>=0.23.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "prefab-ui>=0.19.0",
    "pyyaml>=6.0.3",
]
